sema/testdata/gcc-c99-extra/reject/asm-qual-3.c
asm const ("");
asm volatile ("");
asm restrict ("");
asm inline ("");
asm goto ("");
